--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
       <h2>Comunidade em Ação</h2>
       <div class="cards">
         <div class="card">
-          <img src="avatar-entre-servidor.jpg" alt="Pessoas jogando juntas">
+          <img src="avatar-entre-servidor.jpg" 
           <h3>Entre no servidor</h3>
           <p>Faça parte da comunidade A DOMINUS e comece sua jornada agora.</p>
           <a href="https://discord.gg/GeZJnRpfcD" target="_blank" style="display:inline-block;margin-top:12px;padding:10px 14px;border-radius:10px;background:#0a1f44;color:#fff;font-weight:bold;text-decoration:none;">Entrar no Discord</a>
