--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <link rel="icon" href="favicon.png" type="image/png">
@@ -37,7 +37,6 @@
     }
 
     header {
-      position: relative;
       min-height: 400px;
       text-align: center;
       color: var(--branco);
@@ -46,7 +45,6 @@
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-      overflow: hidden;
     }
 
     header.dark-mode {
@@ -67,13 +65,11 @@
     }
 
     .video-fundo {
-      position: absolute;
-      top: 0;
-      left: 0;
       width: 100%;
-      height: 100%;
+      border-radius: 16px;
+      max-height: 400px;
       object-fit: cover;
-      z-index: -1;
+      margin-bottom: 20px;
     }
 
     nav {
@@ -204,11 +200,7 @@
 <body>
   <button class="dark-toggle">Modo Escuro</button>
 
-  <header id="inicio" class="active-section">
-    <video autoplay muted loop playsinline class="video-fundo">
-      <source src="video-inicio.mp4" type="video/mp4">
-      Seu navegador não suporta vídeos.
-    </video>
+  <header>
     <h1>A DOMINUS</h1>
     <p>Servidor oficial da comunidade <strong>A DOMINUS</strong> no Discord.</p>
     <div style="margin-top:25px; display:flex; justify-content:center; align-items:center; gap:12px;">
@@ -228,6 +220,10 @@
   <main class="container">
     <!-- Início -->
     <section id="inicio" class="section active">
+      <video class="video-fundo" autoplay muted loop playsinline>
+        <source src="video-inicio.mp4" type="video/mp4">
+        Seu navegador não suporta vídeos.
+      </video>
       <h2>Bem-vindo à A DOMINUS</h2>
       <p>Entre, divirta-se e faça amizades na nossa comunidade.</p>
     </section>
@@ -251,7 +247,7 @@
       <h2>Comunidade em Ação</h2>
       <div class="cards">
         <div class="card">
-          <img src="avatar-entre-servidor.jpg" 
+          <img src="avatar-entre-servidor.jpg" alt="Pessoas jogando juntas">
           <h3>Entre no servidor</h3>
           <p>Faça parte da comunidade A DOMINUS e comece sua jornada agora.</p>
           <a href="https://discord.gg/GeZJnRpfcD" target="_blank" style="display:inline-block;margin-top:12px;padding:10px 14px;border-radius:10px;background:#0a1f44;color:#fff;font-weight:bold;text-decoration:none;">Entrar no Discord</a>
