--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <link rel="shortcut icon" href="favicon.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>A DOMINUS | Servidor do Discord, para jogar com amigos e fazer amizades</title>
-  <meta name="description" content="Site oficial do servidor A DOMINUS no Discord. Comunidade, novidades, amizade e destaques." />
-  <meta name="keywords" content="A DOMINUS, Discord, servidor Discord, comunidade, games, tecnologia" />
-  <meta name="author" content="Servidor A DOMINUS" />
+  <title> DOMINUS | Servidor do Discord, para jogar com amigos e fazer amizades, aqui jogamos jogos como, Minecraft,Roblox, Rocket League,e muitos outros.</title>
+  <meta name="description" content="Site oficial do servidor A DOMINUS no Discord,jogue games com seus amigos ou faça novas amizades. Comunidade, novidades, amizade e destaques." />
+  <meta name="keywords" content="DOMINUS, Discord, servidor Discord, comunidade, games, tecnologia" />
+  <meta name="author" content="Servidor DOMINUS" />
   <meta name="robots" content="index, follow" />
 
   <style>
@@ -201,8 +201,8 @@
   <button class="dark-toggle">Modo Escuro</button>
 
   <header>
-    <h1>A DOMINUS</h1>
-    <p>Servidor oficial da comunidade <strong>A DOMINUS</strong> no Discord.</p>
+    <h1> DOMINUS</h1>
+    <p>Servidor oficial da comunidade <strong> DOMINUS</strong> no Discord.</p>
     <div style="margin-top:25px; display:flex; justify-content:center; align-items:center; gap:12px;">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/discord.svg" alt="Discord Logo" width="40" style="filter: invert(1);">
       <span style="font-size:1.1rem; font-weight:bold;">Servidor do Discord</span>
@@ -224,14 +224,14 @@
         <source src="video-inicio.mp4" type="video/mp4">
         Seu navegador não suporta vídeos.
       </video>
-      <h2>Bem-vindo à A DOMINUS</h2>
+      <h2>Bem-vindo à DOMINUS</h2>
       <p>Entre, divirta-se e faça amizades na nossa comunidade.</p>
     </section>
 
     <!-- Sobre -->
     <section id="sobre" class="section">
       <h2>Introdução do Servidor</h2>
-      <p>O servidor <strong>A DOMINUS</strong> foi criado para pessoas que gostam de jogar em call com amigos, se divertir e criar times. Aqui você encontra um ambiente amigável e colaborativo, onde qualquer jogador é bem-vindo.</p>
+      <p>O servidor <strong> DOMINUS</strong> foi criado para pessoas que gostam de jogar em call com amigos, se divertir e criar times. Aqui você encontra um ambiente amigável e colaborativo, onde qualquer jogador é bem-vindo.</p>
       <p>Jogamos títulos como <strong>Minecraft</strong>, <strong>Roblox</strong>, <strong>Rocket League</strong>, <strong>Free Fire</strong>, <strong>Fortnite</strong>, <strong>EOT</strong> e muitos outros.</p>
 
       <div class="cards">
@@ -306,7 +306,7 @@
   </main>
 
   <footer>
-    <p>© 2025 <span>A DOMINUS</span> — Servidor oficial no Discord.</p>
+    <p>© 2025 <span> DOMINUS</span> — Servidor oficial no Discord.</p>
     <p style="font-size:0.9rem; margin-top:8px;">Este site é indexável e pesquisável no Google.</p>
   </footer>
 
