Update contact email in index.html

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     <section id="contato" class="section">
       <h2>Contato</h2>
       <p>Para parcerias, dúvidas ou sugestões, entre em contato pelo e-mail abaixo:</p>
-      <p style="margin-top:10px;font-weight:bold;">📧 renanribeirosoares57@gmail.com</p>
+      <p style="margin-top:10px;font-weight:bold;">📧 dominuscomercy@gmail.com</p>
     </section>
   </main>
 
