Add sponsors section to index.html
Added a new section for sponsors with a heading and introductory text.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <link rel="icon" href="favicon.png" type="image/png">
@@ -214,6 +214,7 @@
     <a data-target="sobre">Sobre</a>
     <a data-target="primeiro">Primeiro Espaço</a>
     <a data-target="ranking">Ranking</a>
+    <a data-target="patrocinadores">Patrocinadores</a>
     <a data-target="contato">Contato</a>
   </nav>
 
@@ -297,6 +298,13 @@
       </div>
     </section>
 
+    <!-- Patrocinadores -->
+    <section id="patrocinadores" class="section">
+      <h2>Patrocinadores</h2>
+      <p>Estamos preparando parcerias para fortalecer ainda mais a comunidade <strong>DOMINUS</strong>.</p>
+      <p style="margin-top:10px;font-weight:bold;">Em breve 🚧</p>
+    </section>
+
     <!-- Contato -->
     <section id="contato" class="section">
       <h2>Contato</h2>
@@ -350,3 +358,4 @@
   </script>
 </body>
 </html>
+
