Revise patrocinadores section with new content

--- a/index.html
+++ b/index.html
@@ -298,12 +298,35 @@
       </div>
     </section>
 
-    <!-- Patrocinadores -->
-    <section id="patrocinadores" class="section">
-      <h2>Patrocinadores</h2>
-      <p>Estamos preparando parcerias para fortalecer ainda mais a comunidade <strong>DOMINUS</strong>.</p>
-      <p style="margin-top:10px;font-weight:bold;">Em breve 🚧</p>
-    </section>
+   <!-- Patrocinadores -->
+<section id="patrocinadores" class="section">
+  <h2>Patrocinadores</h2>
+  <p>
+    Espaço dedicado a parceiros que fortalecem a comunidade
+    <strong>DOMINUS</strong>.
+  </p>
+
+  <div class="cards">
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1581091870627-3a9c1a5d9f12" alt="Em breve">
+      <h3>Em breve</h3>
+      <p>Este espaço será ocupado por um patrocinador.</p>
+    </div>
+
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1600267185393-e158a98703de" alt="Área em manutenção">
+      <h3>Área em manutenção</h3>
+      <p>Estamos ajustando este espaço para novas parcerias.</p>
+    </div>
+
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1521791055366-0d553872125f" alt="Parceria">
+      <h3>Sua marca aqui</h3>
+      <p>Entre em contato e faça parte da DOMINUS.</p>
+    </div>
+  </div>
+</section>
+
 
     <!-- Contato -->
     <section id="contato" class="section">
