--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="shortcut icon" href="favicon.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> DOMINUS | Servidor do Discord, para jogar com amigos e fazer amizades, aqui jogamos jogos como, Minecraft,Roblox, Rocket League,e muitos outros.</title>
+  <title> DOMINUS Servidor do Discord, para jogar com amigos e fazer amizades, aqui jogamos jogos como, Minecraft,Roblox, Rocket League,e muitos outros.</title>
   <meta name="description" content="Site oficial do servidor A DOMINUS no Discord,jogue games com seus amigos ou faça novas amizades. Comunidade, novidades, amizade e destaques." />
   <meta name="keywords" content="DOMINUS, Discord, servidor Discord, comunidade, games, tecnologia" />
   <meta name="author" content="Servidor DOMINUS" />
@@ -324,7 +324,26 @@
       <h3>Sua marca aqui</h3>
       <p>Entre em contato e faça parte da DOMINUS.</p>
     </div>
-  </div>
+  </div> <div style="text-align:center; margin-top:30px;">
+  <a
+    href="mailto:dominuscomercy@gmail.com?subject=Interesse%20em%20Patroc%C3%ADnio"
+    style="
+      display:inline-block;
+      padding:12px 20px;
+      border-radius:10px;
+      background:#4da3ff;
+      color:#ffffff;
+      font-weight:bold;
+      text-decoration:none;
+      transition:0.3s;
+    "
+    onmouseover="this.style.opacity='0.85'"
+    onmouseout="this.style.opacity='1'"
+  >
+    Seja patrocinador
+  </a>
+</div>
+
 </section>
 
 
