Update contact link and button styling in index.html

--- a/index.html
+++ b/index.html
@@ -324,12 +324,13 @@
       <h3>Sua marca aqui</h3>
       <p>Entre em contato e faça parte da DOMINUS.</p>
     </div>
-  </div> <div style="text-align:center; margin-top:30px;">
+ <div style="text-align:center; margin-top:35px;">
   <a
-    href="mailto:dominuscomercy@gmail.com?subject=Interesse%20em%20Patroc%C3%ADnio"
+    href="https://mail.google.com/mail/?view=cm&fs=1&to=dominuscomercy@gmail.com&su=Interesse%20em%20Patrocínio%20DOMINUS"
+    target="_blank"
     style="
       display:inline-block;
-      padding:12px 20px;
+      padding:12px 22px;
       border-radius:10px;
       background:#4da3ff;
       color:#ffffff;
@@ -337,12 +338,11 @@
       text-decoration:none;
       transition:0.3s;
     "
-    onmouseover="this.style.opacity='0.85'"
-    onmouseout="this.style.opacity='1'"
   >
     Seja patrocinador
   </a>
 </div>
+
 
 </section>
 
