--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <!-- Início -->
     <section id="inicio" class="section active">
       <video class="video-fundo" autoplay muted loop playsinline>
-        <source src="video-inicio.mp4" type="video/mp4">
+        <source src="videointro.mp4" type="video/mp4">
         Seu navegador não suporta vídeos.
       </video>
       <h2>Bem-vindo à DOMINUS</h2>
