Add support section with PIX donation details
Added support section with donation information for DOMINUS.

--- a/index.html
+++ b/index.html
@@ -241,6 +241,30 @@
           <p>Tudo começou quando eu, Renan, junto com dois amigos, decidimos criar uma forma de reunir várias pessoas em um único espaço virtual. O objetivo era ajudar todos a desenvolverem suas habilidades sociais, superar comportamentos antissociais e criar novas amizades. Inicialmente, a primeira tentativa não obteve o sucesso desejado, mas não desistimos. Continuamos investindo nosso tempo e esforço no servidor, mantendo a mesma ideia de aproximar pessoas de diferentes lugares. A DOMINUS nasceu com a finalidade de criar conexões genuínas, permitir que as pessoas jogassem juntas e, acima de tudo, fortalecer amizades verdadeiras. Hoje, o servidor existe e prospera graças à dedicação de três pessoas visionárias, mostrando que união e persistência transformam sonhos em realidade.</p>
         </div>
       </div>
+      <hr style="margin:30px 0; opacity:0.3;">
+
+<p style="margin-top:20px; font-size:1.05rem;">
+  💙 <strong>Apoie a DOMINUS</strong><br><br>
+  A DOMINUS é construída com dedicação, tempo e esforço para manter a comunidade ativa,
+  organizada e sempre melhorando.  
+  Se você gosta do servidor e quer ajudar no crescimento do site e da comunidade,
+  qualquer valor já faz diferença.
+</p>
+
+<p style="margin-top:15px; font-size:1.1rem; font-weight:bold;">
+  📌 PIX para apoio:
+</p>
+
+<p style="
+  background:#f2f4f8;
+  padding:12px;
+  border-radius:10px;
+  font-weight:bold;
+  word-break:break-all;
+">
+  👉 675654d4-ec11-430d-8418-013012558719
+</p>
+
     </section>
 
     <!-- Primeiro Espaço -->
