--- a/index.html
+++ b/index.html
@@ -64,12 +64,14 @@
       margin-right: auto;
     }
 
-    ..video-fundo {
+   .video-fundo {
   width: 100%;
-  max-width: 720px;   /* deixa menor */
-  max-height: 260px;  /* mantém formato horizontal */
-  border-radius: 20px;
+  max-width: 640px;     /* controla o tamanho */
+  height: 220px;        /* força formato horizontal */
+  border-radius: 18px;
   object-fit: cover;
+}
+
 }
 
 }
@@ -84,13 +86,15 @@
       flex-wrap: wrap;
     }
 
-    nav a {
-      color: var(--branco);
-      text-decoration: none;
-      font-weight: bold;
-      transition: 0.3s;
-      cursor: pointer;
-    }
+   nav a {
+  color: var(--branco);
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.05rem; /* AUMENTA UM POUCO */
+  transition: 0.3s;
+  cursor: pointer;
+}
+
 
     nav a:hover, nav a.active {
       color: var(--azul-claro);
@@ -202,6 +206,23 @@
   justify-content: center;
   margin-top: 25px;
 }
+    .btn-azul {
+  background-color: #4da3ff;
+  color: #ffffff !important;
+  font-weight: bold;
+  padding: 14px 26px;
+  border-radius: 10px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1rem;
+  transition: 0.3s;
+}
+
+.btn-azul:hover {
+  background-color: #2f8cff;
+  color: #ffffff !important;
+}
+
 
   </style>
 </head>
