--- a/index.html
+++ b/index.html
@@ -222,6 +222,23 @@
   background-color: #2f8cff;
   color: #ffffff !important;
 }
+header {
+  background: rgba(0, 0, 0, 0.55); /* fundo escuro por cima da imagem */
+  padding: 15px 0;
+}
+
+header nav a {
+  color: #ffffff !important;
+  font-size: 16px;
+  font-weight: 600;
+  margin: 0 12px;
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+header nav a:hover {
+  color: #4da3ff !important;
+}
 
 
   </style>
