--- a/index.html
+++ b/index.html
@@ -87,12 +87,13 @@
     }
 
    nav a {
-  color: var(--branco);
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 1.05rem; /* AUMENTA UM POUCO */
+  color: #ffffff !important;
+  padding: 8px 14px;
+  border-radius: 20px;
+  background: rgba(30, 144, 255, 0.85); /* azul do balão */
+  margin: 0 6px;
+  font-weight: 500;
   transition: 0.3s;
-  cursor: pointer;
 }
 
 
