--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title> DOMINUS Servidor do Discord, para jogar com amigos e fazer amizades, aqui jogamos jogos como, Minecraft,Roblox, Rocket League,e muitos outros.</title>
   <meta name="description" content="Site oficial do servidor A DOMINUS no Discord,jogue games com seus amigos ou faça novas amizades. Comunidade, novidades, amizade e destaques." />
-  <meta name="keywords" content="DOMINUS server,dominus Discord, dominus servidor Discord, dominus comunidade" />
+  <meta name="keywords" content="DOMINUS, Discord, servidor Discord, comunidade, games, tecnologia" />
   <meta name="author" content="Servidor DOMINUS" />
   <meta name="robots" content="index, follow" />
 
@@ -64,17 +64,12 @@
       margin-right: auto;
     }
 
-   .video-fundo {
-  width: 100%;
-  max-width: 640px;     /* controla o tamanho */
-  height: 220px;        /* força formato horizontal */
-  border-radius: 18px;
-  object-fit: cover;
-}
-
-}
-
-}
+    .video-fundo {
+      width: 100%;
+      border-radius: 16px;
+      max-height: 400px;
+      object-fit: cover;
+      margin-bottom: 20px;
     }
 
     nav {
@@ -86,7 +81,13 @@
       flex-wrap: wrap;
     }
 
- 
+    nav a {
+      color: var(--branco);
+      text-decoration: none;
+      font-weight: bold;
+      transition: 0.3s;
+      cursor: pointer;
+    }
 
     nav a:hover, nav a.active {
       color: var(--azul-claro);
@@ -193,28 +194,7 @@
       cursor: pointer;
       font-weight: bold;
       z-index: 1000;
-    } .video-wrapper {
-  display: flex;
-  justify-content: center;
-  margin-top: 25px;
-}
-  
-.menu a {
-  color: #ffffff;
-  background-color: #1e90ff;
-  padding: 8px 14px;
-  border-radius: 20px;
-  margin: 0 6px;
-  text-decoration: none;
-  font-weight: 500;
-  transition: background-color 0.3s ease;
-}
-
-.menu a:hover {
-  background-color: #187bcd;
-}
-
-
+    }
   </style>
 </head>
 <body>
@@ -229,29 +209,25 @@
     </div>
   </header>
 
-<nav class="menu">
+  <nav>
     <a data-target="inicio" class="active">Início</a>
     <a data-target="sobre">Sobre</a>
     <a data-target="primeiro">Primeiro Espaço</a>
     <a data-target="ranking">Ranking</a>
     <a data-target="patrocinadores">Patrocinadores</a>
     <a data-target="contato">Contato</a>
-</nav>
-
+  </nav>
 
   <main class="container">
     <!-- Início -->
-   <section id="inicio" class="section active">
-  <h2>Bem-vindo à DOMINUS</h2>
-  <p>Entre, divirta-se e faça amizades na nossa comunidade.</p>
-
-  <div class="video-wrapper">
-    <video class="video-fundo" autoplay muted loop playsinline>
-      <source src="Agent_video_Pippit_20260123184228.mp4" type="video/mp4">
-      Seu navegador não suporta vídeos.
-    </video>
-  </div>
-</section>
+    <section id="inicio" class="section active">
+      <video class="video-fundo" autoplay muted loop playsinline>
+        <source src="Agent_video_Pippit_20260123182346.mp4" type="video/mp4">
+        Seu navegador não suporta vídeos.
+      </video>
+      <h2>Bem-vindo à DOMINUS</h2>
+      <p>Entre, divirta-se e faça amizades na nossa comunidade.</p>
+    </section>
 
     <!-- Sobre -->
     <section id="sobre" class="section">
